fixed visibility of reset button

--- a/01/style.css
+++ b/01/style.css
@@ -81,6 +81,10 @@ button:focus {
   background-color: darkblue;
 }
 
+#reset {
+  border: 2px solid black;
+}
+
 #random {
   color: black;
   background-size: cover;
